--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,48 +1,48 @@
 <div class="container-fluid">
   <div class="row offset-1 py-3">
-    <h2>プロフィール編集</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">プロフィール編集</h2>
   </div>
   <%= form_with model: @user,url:user_path(@user) do |f| %>
     <div class="row offset-3 mt-3">
-    <div class="col-3">
-      <p>写真を選択</p>
+      <div class="col-3">
+        <p>写真を選択</p>
+      </div>
+      <div class="col-3">
+        <%= f.file_field :image, accept: "image/*" %>
+      </div>
     </div>
-    <div class="col-3">
-      <%= f.file_field :image, accept: "image/*" %>
-    </div>
-  </div>
   
-  <div class="row offset-3 mt-3">
-    <div class="col-3">
-      <p>ユーザーID</p>
+    <div class="row offset-3 mt-3">
+      <div class="col-3">
+        <p>名前</p>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :name, style:"width:400px;" %>
+      </div>
     </div>
-    <div class="col-3">
-      <%= f.text_field :account, style:"width:400px;" %>
-    </div>
-  </div>
   
-   <div class="row offset-3 mt-3">
-    <div class="col-3">
-      <p>身長</p>
+    <div class="row offset-3 mt-3">
+      <div class="col-3">
+        <p>身長</p>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :height %>cm
+      </div>
     </div>
-    <div class="col-3">
-      <%= f.text_field :height %>cm
-    </div>
-  </div>
   
-  <div class="row offset-3 mt-3">
-    <div class="col-3">
-      <p>自己紹介</p>
+    <div class="row offset-3 mt-3">
+      <div class="col-3">
+        <p>自己紹介</p>
+      </div>
+      <div class="col-3">
+        <%= f.text_area :introduction, style:"width:400px; height:200px;" %>
+      </div>
     </div>
-    <div class="col-3">
-      <%= f.text_area :introduction, style:"width:400px; height:200px;" %>
-    </div>
-  </div>
   
-  <div class="actions text-center pt-5">
-    <%= f.submit '変更内容を保存', class: "btn btn-success", style:"width:300px;" %>
-  </div>
-<% end %>
+    <div class="actions text-center pt-5">
+      <%= f.submit '変更内容を保存', class: "btn btn-success", style:"width:300px;" %>
+    </div>
+  <% end %>
 
-<%= link_to "退会する", confirm_user_path %>
+  <%= link_to "退会する", confirm_user_path %>
 </div>
