--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row offset-1 py-3">
-    <h2>会員一覧</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">会員一覧</h2>
   </div>
   
   <table class="table">
