--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row offset-1 py-3">
-    <h2>投稿編集</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">投稿編集</h2>
   </div>
 <%= form_with model: @post, url:admin_post_path(@post.id) do |f| %>
   <div class="row offset-3 mt-3">
