--- a/app/views/admin/relationships/followings.html.erb
+++ b/app/views/admin/relationships/followings.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row offset-1 py-3">
-    <h2>フォロー 一覧</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">フォロー 一覧</h2>
   </div>
   
   <% if @users.exists? %>
@@ -10,14 +10,10 @@
           <tr>
             <td>
               <div class="row">
-                <% if user.image.attached? %>
-                  <%= image_tag user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
-                <% else %>
-                  <%= image_tag 'no_image', size: "100x100", class: "mt-3 rounded-circle"; %>
-                <% end %>
+                <%= image_tag user.get_image(100,100), class: "mt-3 rounded-circle"; %>
                 <div class="col my-auto">
                   <%= link_to user.account,admin_user_path(user.id) %></br>
-                  <%= user.name %>
+                  <%= user.name %> / <%= user.height %>cm
                 </div>
               </div>
             </td>
