--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,19 +1,16 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-image:url('/assets/nadin-mario-1gNC4n3QtTs-unsplash'); background-size:cover;">
+  <div style="background-color: rgba(255, 255, 255, 0.5);">
   <div class="row offset-1 py-3">
-    <h2><%= @user.account %>さんの詳細ページ</h2>
+    <h2><%= @user.account %></h2><h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">さんの詳細ページ</h2>
   </div>
 
   <div class="row shadow-sm">
     <div class="mx-auto text-center mb-4">
-      <% if @user.image.attached? %>
-        <%= image_tag @user.image, size:"200x200", class: "mt-3 rounded-circle"; %>
-      <% else %></br>
-        <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
-      <% end %></br>
-      <%= @user.name %></br>
+      <%= image_tag @user.get_image(200,200), class: "mt-3 rounded-circle"; %></br>
+      <h5><%= @user.name %></h5></br>
       <%= @user.account %> / <%= @user.height %>cm</br>
       <%= @user.introduction %></br>
-      <%= link_to "#{@user.followings.count}フォロー", admin_user_followings_path(@user.id) %> | <%= link_to "#{@user.followers.count}フォロワー",admin_user_followers_path(@user.id) %></br>
+      <%= link_to "#{@user.followings.count}フォロー", admin_user_followings_path(@user.id), style: "color: #8216DB;" %> | <%= link_to "#{current_user.followers.count}フォロワー",admin_user_followers_path(@user.id), style: "color: #8216DB;" %><br>
       <%= link_to 'プロフィール編集', edit_admin_user_path,class:"btn btn-outline-dark mr-2 mt-3" %>
       <div class="mt-3"></div>
       <% if @user.is_active? %>
@@ -51,5 +48,7 @@
           </div>
         </div>
         <% end %>
+  </div>
+  
   </div>
 </div>
