--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,15 +1,12 @@
-<div class="card-list-container py-5">
+<div class="container-fluid" style="background-image:url('/assets/nadin-mario-1gNC4n3QtTs-unsplash'); background-size:cover;">
+  <div style="background-color: rgba(255, 255, 255, 0.5);">
   <div class="row offset-1 py-3">
-    <h2>投稿詳細</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">投稿詳細</h2>
   </div>
   
   <div class="card w-50 mx-auto mt-4 shadow-lg">
     <div class="d-flex flex-row align-items-center">
-      <% if @post.user.image.attached? %>
-        <%= image_tag @post.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
-      <% else %>
-        <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
-      <% end %>
+      <%= image_tag @post.user.get_image(100,100), class: "mt-3 rounded-circle"; %>
       <div class="d-flex-colmn">
         <%= link_to (@post.user.account), user_path(@post.user), class: "mr-2"; %>
         <%= @post.user.height %>cm / <%= @post.sex %>
@@ -45,11 +42,7 @@
             <p>コメント<%= @post.comments.count %>件</p>
             <% @post.comments.each do |comment| %>
               <div class="row">
-                <% if comment.user.image.attached? %>
-                  <%= image_tag comment.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
-                <% else %>
-                  <%= image_tag 'no_image', size: "100x100", class: "mt-3 rounded-circle"; %>
-                <% end %>
+                <%= image_tag comment.user.get_image(100,100), class: "mt-3 rounded-circle"; %>
                 <div class="my-auto">
                   <%= comment.user.name %>
                   <%= comment.created_at.strftime('%Y/%m/%d') %></br>
@@ -65,6 +58,7 @@
       </div>
     </div>
   </div>
+  </div>
 </div>
 
 <div class="text-center">
@@ -73,5 +67,7 @@
     <%= f.submit "送信する" %>
   <% end %>
 </div>
+
+
 
 
