--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-image:url('/assets/nadin-mario-1gNC4n3QtTs-unsplash'); background-size:cover;">
+  <div style="background-color: rgba(255, 255, 255, 0.5);">
   <div class="row offset-1 mt-3">
-    <h2>新規会員登録</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">新規会員登録</h2>
   </div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -72,5 +73,6 @@
     <%= link_to "アカウントをお持ちですか？",user_session_path %>
   </div>
 
+  </div>
 </div>
 
