--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row offset-1 py-3">
-    <h2>いいね一覧</h2>
+    <h2 style="font-family: 'Noto Serif JP'; font-weight: 300;">いいね一覧</h2>
   </div>
   
   <div class="card-list-container">
