--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -11,7 +11,7 @@
   <h5><%= @user.name %></h5></br>
   <%= @user.account %> / <%= @user.height %>cm</br>
   <%= @user.introduction %></br>
-  <%= link_to "#{@user.followings.count}フォロー", user_followings_path(@user.id), style: "color: #8216DB;" %> | <%= link_to "#{current_user.followers.count}フォロワー",user_followers_path(@user.id), style: "color: #8216DB;" %><br>
+  <%= link_to "#{@user.followings.count}フォロー", user_followings_path(@user.id), style: "color: #8216DB;" %> | <%= link_to "#{@user.followers.count}フォロワー",user_followers_path(@user.id), style: "color: #8216DB;" %><br>
   <% if current_user && @user.id == current_user.id %>
     <%= link_to 'プロフィール編集', edit_user_path,class:"btn btn-success mr-2 mt-3" %>
     <%= link_to 'いいね一覧', favorites_user_path(@user),class:"btn btn-info mt-3" %></br>
