--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -10,7 +10,7 @@
       <h5><%= @user.name %></h5></br>
       <%= @user.account %> / <%= @user.height %>cm</br>
       <%= @user.introduction %></br>
-      <%= link_to "#{@user.followings.count}フォロー", admin_user_followings_path(@user.id), style: "color: #8216DB;" %> | <%= link_to "#{current_user.followers.count}フォロワー",admin_user_followers_path(@user.id), style: "color: #8216DB;" %><br>
+      <%= link_to "#{@user.followings.count}フォロー", admin_user_followings_path(@user.id), style: "color: #8216DB;" %> | <%= link_to "#{@user.followers.count}フォロワー",admin_user_followers_path(@user.id), style: "color: #8216DB;" %><br>
       <%= link_to 'プロフィール編集', edit_admin_user_path,class:"btn btn-outline-dark mr-2 mt-3" %>
       <div class="mt-3"></div>
       <% if @user.is_active? %>
